--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,15 @@
 %table#movies
   %thead
     %tr
-      %th= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
+	  - if @sort == 'title'
+		%th.highlighted= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
+	  -else
+		%th= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
       %th Rating
-      %th Release Date
+      - if @sort == 'title'
+		%th.highlighted= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
+	  -else
+		%th= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
