--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,12 +4,9 @@
 %table#movies
   %thead
     %tr
-      - if @sort == 'title'
-        %th.highlighted= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
-      - else
-        %th= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
+	  %th= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header', :class => @sort == 'title' ? "highlighted" : ""
       %th Rating
-      - if @sort == 'title'
+      - if @sort == 'release_date'
         %th.highlighted= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
       - else
         %th= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
