--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,8 +4,8 @@
 %table#movies
   %thead
     %tr
-      %th= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header', :class => @sort == 'title' ? "highlighted" : ""
-      %th Rating
+      %th{:class => @sort == 'title' ? "highlighted" : ""
+      %th Rating}= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
       - if @sort == 'release_date'
         %th.highlighted= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
       - else
