--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,11 +1,12 @@
--#  This file is app/views/movies/index.html.haml
+-#  This file is app/views/movies/index.html.haml .... I MADE A CHANGE TO CHECK_BOX_TAG AND ADDED IDS!
+
 %h1 All Movies
 =form_tag movies_path, :method => :get do
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]"
-  = submit_tag 'Refresh'
+    = check_box_tag "ratings[#{rating}]", @ratings.include?[rating], :id => ratings_#{rating}
+  = submit_tag 'Refresh', :id=> 'ratings_submit'
 
 %table#movies
   %thead
