--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,8 +5,8 @@
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag{ :id => "ratings_#{rating}" } "ratings[#{rating}]", @ratings.include?[rating]
-  = submit_tag 'Refresh', :id=> 'ratings_submit'
+    = check_box_tag "ratings[#{rating}]", @ratings.include?[rating]
+  = submit_tag 'Refresh'
 
 %table#movies
   %thead
