--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -11,7 +11,7 @@
 %table#movies
   %thead
     %tr
-      %th{:class => @sort == 'title' ? "highlighted" : nil}= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
+      %th{:class => @sort == 'title' ? "highlighted" : nil}= link_to 'Movie Title', movies_path(:sort => 'title', :ratings => @ratings), :id => 'title_header'
       %th Rating
       %th{:class => @sort == 'release_date' ? "highlighted" : nil}= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
       %th More Info
