--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -13,7 +13,7 @@
     %tr
       %th{:class => @sort == 'title' ? "highlighted" : nil}= link_to 'Movie Title', movies_path(:sort => 'title', :ratings => params[:ratings] ), :id => 'title_header'
       %th Rating
-      %th{:class => @sort == 'release_date' ? "highlighted" : nil}= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
+      %th{:class => @sort == 'release_date' ? "highlighted" : nil}= link_to 'Release Date', movies_path(:sort => 'release_date', :ratings => params[:ratings] ), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
